--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,125 +15,7 @@ a {
   color: black;
 }
 
-.container-fluid {
-  padding: 0;
-}
-
-.navLogo {
-  height: 8vh;
-  width: 10vh;
-  margin-left: 2vw;
-}
-
-@media (min-width: 1024px) {
-  .navLogo {
-    width: 15vh;
-  }
-}
-
-.nav-link {
-  color: #0B132B !important;
-  text-transform: uppercase;
-  font-size: 1.2em;
-  font-family: 'Montserrat', sans-serif;
-}
-
-@media (max-width: 992px) {
-  .nav-link {
-    color: white !important;
-  }
-}
-
-@media (max-width: 992px) {
-  .navbar-collapse {
-    margin-right: 35%;
-  }
-}
-
-.nav-link.scrolled {
-  color: white !important;
-}
-
-.bg-light {
-  background-color: transparent !important;
-}
-
-@media (max-width: 992px) {
-  .bg-light {
-    background-color: #0B132B !important;
-  }
-}
-
-.bg-light.scrolled {
-  background-color: #2581B0 !important;
-}
-
-@media (max-width: 992px) {
-  .bg-light.scrolled {
-    background-color: #0B132B !important;
-  }
-}
-
-.page-header {
-  font-family: 'Montserrat', 700;
-  color: white;
-  text-shadow: 1em 0.5em #0B132B;
-  text-transform: uppercase;
-}
-
-h3.heading {
-  padding-top: 10vh;
-  padding-bottom: 5vh;
-  font-size: 1.9rem;
-  font-family: 700;
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-}
-
-.heading-ul {
-  width: 3rem;
-  height: 0.2rem;
-  background-color: #2581B0;
-  margin: 0 auto 8vh;
-}
-
-footer {
-  height: 15vh;
-  background-color: #0B132B;
-  position: bottom fixed;
-  color: #2581B0;
-  text-transform: uppercase;
-  font-size: 0.8em;
-  font-family: 'Montserrat', sans-serif;
-  text-align: center !important;
-}
-
-footer-container {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-col-4 {
-  margin-left: 4vh;
-}
-
-ul {
-  margin: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-}
-
-body {
-  max-width: 100%;
-}
-
-a {
+a:hover {
   text-decoration: none !important;
   color: black;
 }
@@ -211,6 +93,7 @@ h3.heading {
   font-family: 700;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
+  display: block;
 }
 
 .heading-ul {
@@ -218,6 +101,137 @@ h3.heading {
   height: 0.2rem;
   background-color: #2581B0;
   margin: 0 auto 8vh;
+  display: block;
+}
+
+footer {
+  height: 15vh;
+  background-color: #0B132B;
+  position: bottom fixed;
+  color: #2581B0;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center !important;
+}
+
+footer-container {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+col-4 {
+  margin-left: 4vh;
+}
+
+ul {
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none !important;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none !important;
+  color: black;
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+.navLogo {
+  height: 8vh;
+  width: 10vh;
+  margin-left: 2vw;
+}
+
+@media (min-width: 1024px) {
+  .navLogo {
+    width: 15vh;
+  }
+}
+
+.nav-link {
+  color: #0B132B !important;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    color: white !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    margin-right: 35%;
+  }
+}
+
+.nav-link.scrolled {
+  color: white !important;
+}
+
+.bg-light {
+  background-color: transparent !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light {
+    background-color: #0B132B !important;
+  }
+}
+
+.bg-light.scrolled {
+  background-color: #2581B0 !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light.scrolled {
+    background-color: #0B132B !important;
+  }
+}
+
+.page-header {
+  font-family: 'Montserrat', 700;
+  color: white;
+  text-shadow: 1em 0.5em #0B132B;
+  text-transform: uppercase;
+}
+
+h3.heading {
+  padding-top: 10vh;
+  padding-bottom: 5vh;
+  font-size: 1.9rem;
+  font-family: 700;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  display: block;
+}
+
+.heading-ul {
+  width: 3rem;
+  height: 0.2rem;
+  background-color: #2581B0;
+  margin: 0 auto 8vh;
+  display: block;
 }
 
 footer {
@@ -386,15 +400,47 @@ ul {
   height: auto;
 }
 
+.card-deck {
+  height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 40vh;
+}
+
+@media (min-width: 768px) {
+  .card-deck {
+    margin-top: 0;
+  }
+}
+
 .card {
   display: inline-block;
-  width: 30vh;
+  width: 50vh;
+  height: auto;
+  margin-left: 2rem;
+  max-width: 80%;
+}
+
+.card-title {
+  color: #2581B0;
+}
+
+.card-body {
   height: 30vh;
+}
+
+.card-footer {
+  background-color: #2581B0;
+  font-family: 'Roboto', sans-serif;
 }
 
 .card-img-top {
   width: 100%;
-  height: 15vw;
+  height: 30vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -416,6 +462,11 @@ body {
 }
 
 a {
+  text-decoration: none !important;
+  color: black;
+}
+
+a:hover {
   text-decoration: none !important;
   color: black;
 }
@@ -493,6 +544,7 @@ h3.heading {
   font-family: 700;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
+  display: block;
 }
 
 .heading-ul {
@@ -500,6 +552,7 @@ h3.heading {
   height: 0.2rem;
   background-color: #2581B0;
   margin: 0 auto 8vh;
+  display: block;
 }
 
 footer {
