--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -130,15 +130,41 @@
     height: auto;
 }
 
+.card-deck {
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 40vh;
+
+    @media (min-width: $bp-mobile) {
+        margin-top: 0;
+    }
+}
+
 .card {
     display: inline-block;
-    width: 30vh;
+    width: 50vh;
+    height: auto;
+    margin-left: 2rem;
+    max-width: 80%;
+}
+
+.card-title {
+    color: $brightmidblue;
+}
+
+.card-body {
     height: 30vh;
+}
+
+.card-footer {
+    background-color: $brightmidblue;
+    font-family: 'Roboto', sans-serif;
 }
 
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 30vh;
     object-fit: cover;
 }
 
