--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -55,35 +55,40 @@
     {% if loop.index % 2 == 1 %}
 
     <div class="card-deck">
-        <a href="#">
-            <div class="card">
-                <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">{{profile.username}}</h5>
-                    <p class="card-text">{{profile.shortDescription}}</p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-callout"><i class="fas fa-search-plus">Click for more!</p></i>
-                </div>
-            </div>
-        </a>
-
-        {% endif %}
-
-        {% if loop.index % 2 == 0 %}
-
-        <a href="#">
-            <div class="card">
-                <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">{{profile.username}}</h5>
-                    <p class="card-text">{{profile.shortDescription}}</p>
-                </div>
-                <div class="card-footer">
-                        <p class="card-callout"><i class="fas fa-search-plus">Click for more!</p></i>
+        <div class="row" class="justify-content-center">
+            <div class="col-12 col-md-6">
+                <a href="#">
+                    <div class="card">
+                        <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{profile.username}}</h5>
+                            <p class="card-text">{{profile.shortDescription}}</p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-callout"><i class="fas fa-search-plus card-icon" data-fa-transform="shrink-3" ></i>Click for more!</p>
+                        </div>
                     </div>
+                </a>
             </div>
-        </a>
+
+            {% endif %}
+
+            {% if loop.index % 2 == 0 %}
+            <div class="col-12 col-md-6">
+                <a href="#">
+                    <div class="card">
+                        <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{profile.username}}</h5>
+                            <p class="card-text">{{profile.shortDescription}}</p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-callout"><i class="fas fa-search-plus card-icon" data-fa-transform="shrink-3" ></i>Click for more!</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
 
     </div>
 
