add index.js to base.html

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -60,6 +60,8 @@
 
     <script src="{{url_for('static', filename='js/common.js')}}"></script>
 
+    <script src="{{url_for('static', filename='js/index.js')}}"></script>
+
 
      <!-- Conditional CSS which loads only when the 'About' page is active. The code colors the nav elements a light blue in order to make them more visible against the 'About' page's background. -->
 
