add prev and next btns

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -55,8 +55,8 @@
 
               <!--Controls-->
   <div class="controls-top">
-        <a class="btn-floating" href="#index-carousel" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
-        <a class="btn-floating" href="#index-carousel" data-slide="next"><i
+        <a class="btn-floating prev-btn" href="#index-carousel" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
+        <a class="btn-floating next-btn" href="#index-carousel" data-slide="next"><i
             class="fas fa-chevron-right"></i></a>
       </div>
       <!--/.Controls-->
