fix html errors.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -37,7 +37,7 @@
 
 </section>
 
-<section id="index-carousel">
+<section id="carousel-section">
 
     <!-- The carousel on the index page, which cycles through a total of 6 random profiles in slides of two Bootstrap each. -->
 
@@ -67,7 +67,7 @@
 
                     <div class="card-deck">
 
-                        <div class="row" class="justify-content-center">
+                        <div class="row justify-content-center">
                             <div class="col-12 col-md-6 d-none d-md-block">
                                 <a href="#">
                                     <div class="card">
@@ -115,8 +115,8 @@
 
             <ol class="carousel-indicators">
                 <li data-target="#index-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#index-carousel" data-slide-to="1"></li>
-                <li data-target="#index-carousel" data-slide-to="2"></li>
+                <li data-target="#index-carousel" data-slide-to="1" class></li>
+                <li data-target="#index-carousel" data-slide-to="2" class></li>
             </ol>
 
 
