--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -52,8 +52,8 @@
         <!-- The carousel on the index page, which cycles through a total of 6 random profiles in slides of two Bootstrap each. -->
         <!-- Much of the carousel code on this section was taking from Anna Greaves' index.html page for her FamilyHub project. Link: https://github.com/Code-Institute-Submissions/familyhub/blob/master/templates/pages/index.html -->
 
-        <div class="carousel slide carousel-multi-item" data-ride="carousel"  id="index-carousel" >
-    
+        <div class="carousel slide carousel-multi-item" data-ride="carousel" id="index-carousel">
+
 
             <!--Slides-->
             <div class="carousel-inner" role="listbox">
@@ -112,13 +112,13 @@
 
                 <!-- End inner carousel -->
             </div>
-
-            <ol class="carousel-indicators">
-                <li data-target="#index-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#index-carousel" data-slide-to="1" class></li>
-                <li data-target="#index-carousel" data-slide-to="2" class></li>
-            </ol>
-
+            <div class="indicator-wrapper">
+                <ol class="carousel-indicators">
+                    <li data-target="#index-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#index-carousel" data-slide-to="1" class></li>
+                    <li data-target="#index-carousel" data-slide-to="2" class></li>
+                </ol>
+            </div>
 
             <!-- End carousel wrapper -->
 
