start search.html

--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -29,7 +29,7 @@
                 </li>
 
                 <li class="nav-item" id="navSearch">
-                    <a class="nav-link hvr-bounce-in" href="#" id="navSearchLink">Search</a>
+                    <a class="nav-link hvr-bounce-in" href="{{url_for('search')}}" id="navSearchLink">Search</a>
                 </li>
 
                 <li class="nav-item" id="navLogReg">
