--- a/static/scss/_about.scss
+++ b/static/scss/_about.scss
@@ -21,8 +21,7 @@
 
 
         background: url("/static/img/hero.jpg") center top no-repeat scroll;
-        background-position: contain;
-
+        background-size: cover;
     }
 
 
