set up search.html

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -4,12 +4,10 @@
 
 <section id="search-window">
 
-    <div class="col-12">
-        <h3 class="heading text-center">Search
-        </h3>
 
-        <div class="heading-ul"></div>
-    </div>
+        <div class="col-12 page-header-box d-flex justify-content-center align-items-center d-block">
+                <h1 class="page-header">Search</h1>
+            </div>
 
 </section>
 
