--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -2,5 +2,6 @@
 @import "_layout.scss";
 @import "_index.scss";
 @import "_about.scss";
+@import "_search.scss";
 
 // For comments on some of the thought processes behind the CSS, please look at main.css.
