--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -69,38 +69,14 @@
 
                         <div class="row justify-content-center">
                             <div class="col-12 col-md-6 d-none d-md-block">
-                                <a href="#">
-                                    <div class="card">
-                                        <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{profile.username}}</h5>
-                                            <p class="card-text">{{profile.shortDescription}}</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <p class="card-callout"><i class="fas fa-search-plus card-icon"
-                                                    data-fa-transform="shrink-3"></i>Click for more!</p>
-                                        </div>
-                                    </div>
-                                </a>
+                                    {% include 'layouts/profile_card.html' %}
                             </div>
 
                             {% endif %}
 
                             {% if loop.index % 2 == 0 %}
                             <div class="col-12 col-md-6">
-                                <a href="#">
-                                    <div class="card">
-                                        <img src="{{profile.imgUrl}}" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{profile.username}}</h5>
-                                            <p class="card-text">{{profile.shortDescription}}</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <p class="card-callout"><i class="fas fa-search-plus card-icon"
-                                                    data-fa-transform="shrink-3"></i>Click for more!</p>
-                                        </div>
-                                    </div>
-                                </a>
+                                    {% include 'layouts/profile_card.html' %}
                             </div>
                         </div>
 
