--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -99,7 +99,7 @@
     {% if active == 'search' %}
 
     <style>
-       .bg-light {
+       #navbar.bg-light {
             background-color: #0B132B !important;
         }
 
