--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -35,19 +35,19 @@ a[data-toggle="collapse"] {
 }
 
 #sidebar {
-    background: #7386D5;
+    background: $darkbrightblue;
     color: #fff;
     transition: all 0.3s;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: $darkbrightblue;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    border-bottom: 1px solid $darkbrightblue;
 }
 
 #sidebar ul p {
@@ -61,16 +61,16 @@ a[data-toggle="collapse"] {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: $darkbrightblue;
+    background: $brightlightblue;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: $darkbrightblue;
 }
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: $darkbrightblue;
 }
