--- a/static/css/main.css
+++ b/static/css/main.css
@@ -707,13 +707,24 @@ ul {
 }
 
 #sidebar {
-  min-width: 30vw;
-  max-width: 30vw;
+  width: 80vw;
   min-height: 100vh;
 }
 
+@media (min-width: 768px) {
+  #sidebar {
+    width: 40vw;
+  }
+}
+
 #sidebar.active {
-  margin-left: -30vw;
+  margin-left: -80vw;
+}
+
+@media (min-width: 768px) {
+  #sidebar.active {
+    margin-left: -40vw;
+  }
 }
 
 a[data-toggle="collapse"] {
@@ -727,15 +738,6 @@ a[data-toggle="collapse"] {
   right: 20px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-}
-
-@media (max-width: 768px) {
-  #sidebar {
-    margin-left: -250px;
-  }
-  #sidebar.active {
-    margin-left: 0;
-  }
 }
 
 #sidebar {
@@ -771,7 +773,8 @@ a[data-toggle="collapse"] {
   background: #8EDAF4;
 }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
+#sidebar ul li.active > a,
+a[aria-expanded="true"] {
   color: #fff;
   background: #7791B4;
 }
