--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -1,16 +1,25 @@
+// As with the HTML code for the sidebar, much of the CSS was taken from  https://bootstrapious.com/p/bootstrap-sidebar and heavily edited.
+
 .wrapper {
     display: flex;
     align-items: stretch;
 }
 
 #sidebar {
-    min-width: 30vw;
-    max-width: 30vw;
+    width: 80vw;
     min-height: 100vh;
+
+    @media (min-width: $bp-mobile) {
+        width: 40vw;
+    }
 }
 
 #sidebar.active {
-    margin-left: -30vw;
+    margin-left: -80vw;
+
+    @media (min-width: $bp-mobile) {
+        margin-left: -40vw;
+    }
 }
 
 a[data-toggle="collapse"] {
@@ -25,14 +34,6 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-}
 
 #sidebar {
     background: $midblue;
@@ -60,15 +61,18 @@ a[data-toggle="collapse"] {
     font-size: 1.1em;
     display: block;
 }
+
 #sidebar ul li a:hover {
     color: $midblue;
     background: $brightlightblue;
 }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
     color: #fff;
     background: $midblue;
 }
+
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
