--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -40,7 +40,7 @@
 
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Bootstrap Sidebar</h3>
+                <h3>Search Users</h3>
             </div>
 
             <ul class="list-unstyled components">
